--- a/code/analysis/balance.Rmd
+++ b/code/analysis/balance.Rmd
@@ -1,5 +1,9 @@
 ---
-title: "Balance"
+title: "Measuring Balance"
+author: "Sylvan Zheng"
+output:
+    html_document:
+        toc: true
 ---
 
 ```{r include=F}
@@ -8,11 +12,36 @@ main <- sources %>%
     calculate_balance(
         types = c("org_category", "cfscore"),
     )
+main.i2 <- sources %>%
+    calculate_balance(
+        types = c("org_category", "cfscore"),
+        cfscore.options = list(impute.all=T)
+    )
+knitr::opts_chunk$set(fig.height = 4)
 ```
 
-# Descriptive
+This document contains analysis related to the measure of balance/bothsides journalism.
 
-```{r}
+- Many different possible interpretations, but we focus on the idea of "both sides" journalism/"equal coverage"
+- We define balance as an **article level indicator** that captures whether an article contains a quote from **both** a liberal and conservative source 
+    - We assume that the source of the quote is a good proxy for its content
+- "Left leaning" source: `environmental_advocacy` classification OR `cfscore < -0.3`
+    - NRDC, Environmental Defense Fund, Sierra Club
+- "Right leaning" source: `fossil_fuel_interest` classification OR `cfscore > 0.3`
+    - American Petroleum Institute, Exxon Mobile, US Chamber of Commerce
+- Balance Dummy: article includes both a "right" and "left" source
+    - `r round(sum(main$balance, na.rm=T) * 100/nrow(main))`% of articles are "balanced" by this definition
+
+# Alternative Measures of Balance
+
+- Here, I show that our measure of balance is correlated with other reasonable measures
+- Balance indicator correlated with mean ideology score closer to 0
+- Balance indicator correlated with higher source ideology SD
+- Balance indicator correlated with lower normalized absolute difference between number of left and right sources
+
+## Histograms
+
+```{r, fig.width=12}
 ggarrange(plotlist = list(
     ggplot(main, aes(x = cfscore, fill = balance)) +
         geom_histogram() +
@@ -23,44 +52,86 @@ ggarrange(plotlist = list(
     ggplot(main, aes(x = diff_normalized, fill = balance)) +
         geom_histogram() +
         theme_min
-), common.legend = T, legend = "bottom", nrow=1)
+), common.legend = T, legend = "bottom", nrow = 1)
 ggsave(here("paper/figures/balance-cf-hists.png"), width = 8, height = 4)
+```
 
+## Scatter 
+
+```{r}
 ggplot(main, aes(x = cfscore, y = cfscore.sd, color = balance)) +
-        geom_point(alpha = 0.3, stroke = NA) +
-        theme_min
+    geom_point(alpha = 0.3, stroke = NA) +
+    theme_min
 ggsave(here("paper/figures/balance-cfscoresd-scatter.png"), width = 6, height = 4)
 ```
 
-# Main Result #1: Organization Balance decreases over time
+## Regressions
 
 ```{r}
-main %>% ggplot(aes(x = date, y = as.numeric(balance))) +
-    geom_smooth(method = "gam") +
-    theme_min +
-    labs(y = "Balance", x = "Date")
-ggsave(here("paper/figures/balance-overview-gam.png"), width = 6, height = 4)
+ms <- list(
+    feols(balance ~ cfscore, data = main),
+    feols(balance ~ cfscore | year + source, data = main),
+    feols(balance ~ cfscore.sd, data = main),
+    feols(balance ~ cfscore.sd | year + source, data = main),
+    feols(balance ~ diff_normalized, data = main),
+    feols(balance ~ diff_normalized | year + source, data = main)
+)
+etable2(ms, here("paper/tables/balance-cf-regressions.tex"))
 ```
 
-## Robust to SD as alternate outcome
+# Balance trend over time
+
+- Balance generally declining over time
+- Particular drop in 2017-2020
 
 ```{r}
-main %>% ggplot(aes(x = date, y = cfscore.sd)) +
-    geom_smooth(method = "loess") +
-    geom_point(alpha=0.1) + 
-    theme_min
+plots <- list(
+    main %>% group_by(year) %>% balance_rate() %>%
+        ggplot(aes(x = year, y = as.numeric(balance))) +
+        geom_line() +
+        theme_min +
+        scale_x_continuous(breaks = seq(2012, 2022, 2)) +
+        labs(y = "Balance", x = "Year"),
+    main %>% group_by(year) %>% summarize(cfscore.sd = mean(cfscore.sd, na.rm = T)) %>% ggplot(aes(x = year, y = cfscore.sd)) +
+        geom_line() +
+        theme_min +
+        scale_x_continuous(breaks = seq(2012, 2022, 2)) +
+        labs(y = "Cfscore SD", x = "Year")
+)
+ggarrange(plotlist = plots)
+ggsave(here("paper/figures/balance-overview-year.png"), width = 6, height = 4)
 ```
 
-## Robust to varying imputation strategy
+## Regression
 
-Overall, the negative time trend is robust to all of our imputation strategies.
-Our main specification uses matched cfscores and includes imputed cfscores when data is missing 
-Other specifications including only using the organization classifications, the raw DIME data (no imputation), 
-and exclusively using imputation tell a similar story
+- 5.6% less balanced articles in Trump era
+
+```{r}
+ms <- list(
+    feols(balance ~ year, data=main),
+    feols(balance ~ admin, data=main),
+    feols(balance ~ year, data=main.i2),
+    feols(balance ~ admin, data=main.i2)
+)
+etable2(ms, here('paper/tables/balance-overview.tex'))
+```
+
+
+## Robust to imputation strategy
+
+- Our main specification uses matched DIME cfscore and includes imputed cfscores when data is missing.
+- Also, we count environmental_advocacy as left and fossil fuel categorization as right no matter what.
+- We can look at the balance over time varying this specification:
+    - Category only
+    - CFscore only
+    - No imputation
+    - All imputation
+- If anything the other specifications make the negative trend more pronounced
 
 ```{r}
 specs <- list(
     list("types" = c("org_category"), cfscore.options = list(), label = "Category only"),
+    list("types" = c("cfscore"), cfscore.options = list(), label = "Cfscore only"),
     list("types" = c("org_category", "cfscore"), cfscore.options = list(impute.off = T, nwd.sd.thres = 0.8), label = "Category + raw cfscore"),
     list("types" = c("org_category", "cfscore"), cfscore.options = list(nwd.sd.thresh = 0.8), label = "Category + imputed cfscore"),
     list("types" = c("org_category", "cfscore"), cfscore.options = list(impute.all = T, nwd.sd.thresh = 0.8), label = "Category + total imputation")
@@ -78,16 +149,21 @@ df %>% ggplot(aes(x = date, y = as.numeric(balance), color = label)) +
     theme_min +
     labs(x = "Date", y = "Balance", color = "Specification")
 ggsave(here("paper/figures/balance-overview-robust-1.png"), width = 6, height = 4)
+df %>%
+    group_by(year, label) %>%
+    balance_rate() %>%
+    ggplot(aes(x = year, y = balance, color = label)) +
+    geom_line() +
+    theme_min +
+    labs(x = "Date", y = "Balance", color = "Specification")
 ```
 
-## Robustness increases when dropping bad matches 
+## Robustness to bad match threshold
 
-We define a bad match as one where there the DIME ideology scores for an organization are widely varying, 
-ie when the SD of the scores exceeds a certain threshold.
-Our main specification uses a threshold of 0.8
-We can see how the relationship changes with different thresholds for determining "widely varying"
-The following chart shows that the negative time trend is increasingly apparent the more strictly 
-we reject bad matches.
+- When we match to DIME, we have to make a decision about what to do when there are multiple matches with a wide range of cfscores. 
+- Our default specification throws out matches with SD > 0.5 and uses the imputed score instead. 
+- We can vary the threshold used
+- The negative time trend is increasingly apparent the more strictly we reject bad matches.
 
 ```{r}
 df <- lapply(seq(0.1, 1, 0.1), \(x) {
@@ -107,9 +183,10 @@ ggsave(here("paper/figures/balance-overview-robust-2.png"), width = 6, height = 
 
 ## Robustness to varying left/right threshold
 
-Our measure of balance depends on an arbitrary threshold 't'
-Organizations with cfscore > t and cfscore < -t are classified as "right" and "left"
-Our main specification uses a t=0.2 but results are robust to other specifications of t.
+- Our measure of balance depends on an arbitrary threshold 't'
+- Organizations with cfscore > t and cfscore < -t are classified as "right" and "left"
+- Our main specification uses t=0.3 
+- Vary `t` and observe similar time trends
 
 ```{r}
 seq(0.1, 0.6, 0.1) %>%
@@ -131,14 +208,123 @@ seq(0.1, 0.6, 0.1) %>%
 ggsave(here("paper/figures/balance-overview-robust-3.png"), width = 6, height = 4)
 ```
 
-## NOT ROBUST to including politicians or topics 
+# Variation by Newspaper
+
+- How much do newspapers vary in their level of balance
+- WSJ is more balanced likely because it focuses on business audience
+- NYT does not drop balance as much as other sources
+- Overall, there is some outlet level variation. But also, lots of variation unexplained by outlet
+
+
+## Smoothed Trend
+
+```{r}
+ggarrange(plotlist = list(
+    main %>% ggplot(aes(x = date, y = as.numeric(balance), color = source)) +
+        geom_smooth(method = "loess", se = F) +
+        labs(y = "Balance", x = "Date", color = "Newspaper") +
+        theme_min,
+    main %>% ggplot(aes(x = date, y = as.numeric(cfscore.sd), color = source)) +
+        geom_smooth(method = "loess", se = F) +
+        labs(y = "Source SD", x = "Date", color = "Newspaper") +
+        theme_min
+), common.legend = T, legend = "bottom")
+```
+
+## Mean Balance By Year
+
+```{r}
+main %>%
+    group_by(year, source) %>%
+    summarize(balance = sum(balance, na.rm = T) / sum(!is.na(balance))) %>%
+    ggplot(aes(x = year, y = as.numeric(balance), color = source, lty = source, shape = source)) +
+    geom_line() +
+    geom_point() +
+    theme_min +
+    scale_x_continuous(breaks = seq(2012, 2022, 2)) +
+    labs(y = "Balance", x = "Date")
+ggsave(here("paper/figures/balance-overview-outlet.png"), width = 6, height = 4)
+```
+
+## Group by Newspaper Lean
+
+- WSJ is the only "right leaning newspaper"
+- NYT, LAT, WAPO "left"
+- USAToday, ChicagoT, "center"
+
+```{r}
+main$newspaper_lean <- replace_na(main$newspaper_lean, "CENTER")
+main %>%
+    group_by(year, newspaper_lean) %>%
+    summarize(balance = sum(balance, na.rm = T) / sum(!is.na(balance))) %>%
+    ggplot(aes(x = year, y = as.numeric(balance), color = newspaper_lean)) +
+    geom_line() +
+    geom_point() +
+    theme_min +
+    scale_x_continuous(breaks = seq(2012, 2022, 2)) +
+    scale_color_manual(values=c('CENTER' = 'grey40', 'LEFT'='dodgerblue', 'RIGHT'='coral')) + 
+    labs(y = "Balance", x = "Date")
+```
+
+## Regressions
+
+```{r}
+ms <- list(
+    feols(balance ~ source, data = main),
+    feols(balance ~ source * year, data = main),
+    feols(balance ~ source | year, data = main)
+)
+etable2(ms, here("paper/tables/source-balance.tex"))
+ms2 <- list(
+    feols(balance ~ (newspaper_lean == "RIGHT") * post2016, data = main),
+    feols(balance ~ (newspaper_lean == "RIGHT") * post2016 | year + source, data = main)
+)
+etable2(ms, here("paper/tables/source-lean-balance.tex"))
+```
+
+# Conclusions
+
+- We show balance in coverage as defined by types and ideology of cited organizations is lower during 2016-2020
+    - For some specifications, the overall trend is negative even into the Biden admin
+    - The outlet level analysis suggests that WSJ is somewhat different and continued to cite business sources, while left and center declined after 2016
+    - This doesn't survive the basic TWFE specification, although the estimate is the same magnitude
+- Lots of variation unexplained by outlet and year level factors. Is low R2 the best way to understand this?
+
+# Extra descriptive analysis
+
+
+## Mean Slant over Time
+```{r}
+main %>%
+    ggplot(aes(x = date, y = cfscore)) +
+    geom_smooth(method = "loess") +
+    labs(
+        y = "Mean Slant (cfscore)",
+        x = "Date"
+    ) +
+    theme_min
+ggsave(here("paper/figures/slant-overview.png"), width = 6, height = 4)
+```
+
+## Balance/Slant Scatter Plot
+```{r}
+main %>%
+    filter(!is.na(balance)) %>%
+    ggplot(aes(x = date, y = cfscore, color = balance, stroke = NA)) +
+    geom_hline(yintercept = 0, lty = 2) +
+    geom_point(alpha = 0.1, size = 3, position = position_jitter(height = 0.04)) +
+    geom_smooth(se = F) +
+    labs(y = "Slant (cfscore)", x = "Date", color = "Balance") +
+    theme_min
+ggsave(here("paper/figures/balance-slant-scatter.png"), width = 6, height = 4)
+```
+
+## Including politicians 
 
 ```{r}
 df <- list(
     c("org_category", "cfscore"),
-    c("org_category", "cfscore", "party"),
-    c("org_category", "cfscore", "topic"),
-    c("org_category", "cfscore", "party", "topic")
+    c("org_category", "cfscore", "party")
 ) %>%
     lapply(\(t) {
         sources %>%
@@ -179,57 +365,3 @@ df %>% ggplot(aes(x = date, y = as.numeric(cfscore.sd), color = label)) +
     theme_min +
     labs(x = "Date", y = "SD", color = "model")
 ```
-
-# Related descriptive analysis
-
-## Variation by Newspaper
-
-Maybe most notably, NYT doesn't follow the trend. Others are somewhat similar.
-WSJ is the most balanced overall probably because of business focus.
-
-SD outcome looks a little better across the board but not for all
-
-```{r}
-ggarrange(plotlist = list(
-    main %>% ggplot(aes(x = date, y = as.numeric(balance), color = source)) +
-        geom_smooth(method = "loess", se = F) +
-        labs(y = "Balance", x = "Date", color = "Newspaper") +
-        theme_min,
-    main %>% ggplot(aes(x = date, y = as.numeric(cfscore.sd), color = source)) +
-        geom_smooth(method = "loess", se = F) +
-        labs(y = "Source SD", x = "Date", color = "Newspaper") +
-        theme_min
-), common.legend = T, legend = "bottom")
-```
-
-## Mean Slant over Time
-```{r}
-main %>%
-    ggplot(aes(x = date, y = cfscore)) +
-    geom_smooth(method = "loess") +
-    labs(
-        y = "Mean Slant (cfscore)",
-        x = "Date"
-    ) +
-    theme_min
-ggsave(here("paper/figures/slant-overview.png"), width = 6, height = 4)
-```
-
-## Balance/Slant Scatter Plot
-```{r}
-main %>%
-    filter(!is.na(balance)) %>%
-    ggplot(aes(x = date, y = cfscore, color = balance, stroke = NA)) +
-    geom_hline(yintercept = 0, lty = 2) +
-    geom_point(alpha = 0.1, size = 3, position = position_jitter(height = 0.04)) +
-    geom_smooth(se = F) +
-    labs(y = "Slant (cfscore)", x = "Date", color = "Balance") +
-    theme_min
-ggsave(here("paper/figures/balance-slant-scatter.png"), width = 6, height = 4)
-```
-
-# Conclusions
-
-1. We show balance in coverage as defined by types and ideology of organizations decreases over time and is robust to many modeling specifications   
-2. The pattern does not show when we look at politicians. The SD outcome shows something interesting though, where it increases until ~2017 then drops a lot. This is consistent with a story where journalists increasingly cite Republicans/Trump in early years of the administration then veer sharply away. The balance data is a bit messier but may show something similar (sharp decline after 2020 instead of 2017/2018)
-3. The pattern does not show when we look at topics. The topic measure is pretty coarse so it could be a measurement error. Alternatively, it could have an interesting substantive interpretation where Biden admin pivots to business oriented green infrastructure regulation. So people talk a lot about business benefits but they aren't right wing/fossil fuel groups. More renewable energy companies or something.
